// Copyright 2020 Dolthub, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// WARNING: This file was is automatically generated. DO NOT EDIT BY HAND.


syntax = "proto3";

package dolt.services.eventsapi.v1alpha1;

option go_package = "github.com/dolthub/dolt/go/gen/proto/dolt/services/eventsapi/v1alpha1;eventsapi";

enum Platform {
    PLATFORM_UNSPECIFIED = 0;
    LINUX = 1;
    WINDOWS = 2;
    DARWIN = 3;
}

enum ClientEventType {
    TYPE_UNSPECIFIED = 0;
    INIT = 1;
    STATUS = 2;
    ADD = 3;
    RESET = 4;
    COMMIT = 5;
    SQL = 6;
    SQL_SERVER = 7;
    LOG = 8;
    DIFF = 9;
    MERGE = 10;
    BRANCH = 11;
    CHECKOUT = 12;
    REMOTE = 13;
    PUSH = 14;
    PULL = 15;
    FETCH = 16;
    CLONE = 17;
    LOGIN = 18;
    VERSION = 19;
    CONFIG = 20;
    LS = 21;
    SCHEMA = 22;
    TABLE_IMPORT = 23;
    TABLE_EXPORT = 24;
    TABLE_CREATE = 25;
    TABLE_RM = 26;
    TABLE_MV = 27;
    TABLE_CP = 28;
    TABLE_SELECT = 29;
    TABLE_PUT_ROW = 30;
    TABLE_RM_ROW = 31;
    CREDS_NEW = 32;
    CREDS_RM = 33;
    CREDS_LS = 34;
    CONF_CAT = 35;
    CONF_RESOLVE = 36;
    REMOTEAPI_GET_REPO_METADATA = 37;
    REMOTEAPI_HAS_CHUNKS = 38;
    REMOTEAPI_GET_DOWNLOAD_LOCATIONS = 39;
    REMOTEAPI_GET_UPLOAD_LOCATIONS = 40;
    REMOTEAPI_REBASE = 41;
    REMOTEAPI_ROOT = 42;
    REMOTEAPI_COMMIT = 43;
    REMOTEAPI_LIST_TABLE_FILES = 44;
    BLAME = 45;
    CREDS_CHECK = 46;
    CREDS_USE = 47;
    CREDS_IMPORT = 48;
    REMOTEAPI_ADD_TABLE_FILES = 49;
    MIGRATE = 50;
    TAG = 51;
    GARBAGE_COLLECTION = 52;
    FILTER_BRANCH = 53;
    DUMP = 54;
    CHERRY_PICK = 55;
    STASH = 56;
    STASH_CLEAR = 57;
    STASH_DROP = 58;
    STASH_LIST = 59;
    STASH_POP = 60;
    SHOW = 61;
    PROFILE = 62;
    REFLOG = 63;
    SQL_SERVER_HEARTBEAT = 64;
}

enum MetricID {
    METRIC_UNSPECIFIED = 0;
    BYTES_DOWNLOADED = 1;
    DOWNLOAD_MS_ELAPSED = 2;
    REMOTEAPI_RPC_ERROR = 3;
}

enum AttributeID {
    reserved 1;
    ATTRIBUTE_UNSPECIFIED = 0;
    REMOTE_URL_SCHEME = 2;
}

enum AppID {
    APP_ID_UNSPECIFIED = 0;
    APP_DOLT = 1;
    APP_DOLTGRES = 2;
}
